...
    
    var body: some View {
        NavigationView { // Wrap in NavigationView
            VStack {
                Spacer()
                
                Text("ChessMaster")
                    .font(.title)
                    .fontWeight(.heavy)
                    .lineLimit(nil)
                    .padding(.bottom, 10)
                
                Image("app-icon")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .frame(width: 100, height: 100)
                    .padding(.bottom, 30)
                
                TextField("Username", text: $username)
                    .padding()
                    .background(Color.gray.opacity(0.1))
                    .cornerRadius(20)
                    .padding(.horizontal)
                    .autocapitalization(.none)
    
                ZStack(alignment: .trailing) {
                        if showPassword {
                            TextField("Password", text: $password)
                                    .padding()
                                    .background(Color.gray.opacity(0.1))
                                    .cornerRadius(20)
                                    .padding(.horizontal)
                                    .autocapitalization(.none)
                            } else {
...
                               showError = true
                               DispatchQueue.main.asyncAfter(deadline: .now() + 4) {
                                   showError = false // Hide the error message after 4 seconds
                               }
                           }
                }) {
                    Text("LOG IN")
                        .foregroundColor(.white)
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.blue)
                        .cornerRadius(25)
                        .padding(.horizontal)
                }
                
                if showError {
                        Text("Invalid Username or Password")
                            .foregroundColor(.red)
                            .padding(.top, 20)
                    }
                
                if isLoginSuccessful {
                    Text("Login Successful!")
...
                            }
                        )
                }
                
                Spacer()
                NavigationLink(destination: CreateUserView(isLoggedin: .constant(false))) {
                    Text("Don't have an account? Sign Up")
                        .foregroundColor(.blue)
                        .padding(.bottom, 20)
                }
            }
            .padding()
        }
...
        UserDefaults.standard.set(username, forKey: "username")
        UserDefaults.standard.set(password, forKey: "password")
    }
    
    var body: some View {
        VStack {
            Text("CREATE ACCOUNT")
                .font(.title)
                .lineLimit(nil)
                .padding(.bottom, 10)
            
            TextField("Username", text: $username)
                .padding()
...
                    showError = true
                    DispatchQueue.main.asyncAfter(deadline: .now() + 4) {
                        showError = false // Hide the error message after 4 seconds
                    }
                }
            }) {
                Text("SIGN UP")
                    .foregroundColor(.white)
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(Color.blue)
                    .cornerRadius(25)
                    .padding(.horizontal)
            }
            
            // Display error message if sign-up fails
            if showError {
                Text("Username already exists")
                    .foregroundColor(.red)
                    .padding(.top, 20)
            }
            
            if isSignupSuccessful {
                Text("Sign up Successful!")
...
