...
                        Image("app-icon")
                            .resizable()
                            .aspectRatio(contentMode: .fit)
                            .frame(width: 50, height: 50)
//                            .padding(.bottom, 70)
                        
                        Text("ChessVision")
                            .font(.title)
                            .fontWeight(.heavy)
                            .lineLimit(nil)
                            .padding(.bottom, 20)
                    }
//                    .padding()
...
                .navigationBarItems(trailing: Button(action: {showProfile = true}) {
                                    Image(systemName: "person.circle.fill")
                                        .resizable()
                                        .aspectRatio(contentMode: .fit)
                                        .frame(width: 40, height: 40)
                                        .foregroundColor(.black)
                                        .accessibility(identifier: "profileButton")
                                })
                                .sheet(isPresented: $showProfile) {
                                                ProfileView(isLoggedin: $isLoggedin)
                                }
            }
        }
...
        navigateToFinishGame = true
    }
}

struct OverallStatisticsContent: View {
    var body: some View {
        Text("Overall Progress")
            .font(.headline)
            .foregroundColor(Color.white)
            .padding(.vertical, 10)
            .frame(width: 250)
            .background(RoundedRectangle(cornerRadius: 25).fill(Color(hex: 0x0766AD)))
            .shadow(radius: 5)
    }
}

struct StartGameContent: View {
    var body: some View {
        Text("Start Game")
            .font(.headline)
            .foregroundColor(Color.white)
            .padding(.vertical, 10)
            .frame(width: 250)
            .background(RoundedRectangle(cornerRadius: 25).fill(Color(hex: 0x29ADB2)))
            .shadow(radius: 5)
...
