...
                    .padding(.vertical)
            
                Button(action: {
                               // Display change password alert
                               showChangeAlert = true
                           }) {
                               Text("Change Password")
                                   .padding()
                                   .frame(maxWidth: .infinity)
                                   .background(Color.blue)
                                   .foregroundColor(.white)
                                   .cornerRadius(25)
                                   .padding(.horizontal)
                                   .alert(isPresented: $showChangeAlert) {
                                       Alert(title: Text("Change Password"), message: Text("Are you sure you want to change your password?"),
                                               primaryButton: .default(Text("Yes")) {
                                               wrapperItem?.checkUser(username, password: origPassword)
                                               wrapperItem?.changePassword(password)
                                    
                                               },
                                               secondaryButton: .cancel(Text("No")))
                                       }
...
                    // Perform logout action
                    print("Logout button pressed")
                    isLoggedin = false
                    UserDefaults.standard.removeObject(forKey: "username")
                    UserDefaults.standard.removeObject(forKey: "password")
                }) {
                    Text("Logout")
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.gray)
                        .foregroundColor(.white)
                        .cornerRadius(25)
                        .padding(.horizontal)
...
                Spacer()
                Button(action: {
                    // Perform delete action
                    showDeleteAlert = true
                    print("delete button pressed")
                }) {
                    Text("Delete Account")
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.red)
                        .foregroundColor(.white)
                        .cornerRadius(25)
                        .padding(.horizontal) 
...
