...
        let game = Chess.Game.sampleGame()
        self._store = StateObject(wrappedValue: ChessStore(game: game))
        
        // Parse Best move UCI strings and generate FEN strings
        for (fen, uci) in zip(fenStrings, uciStrings) {
            // Get best move for each FEN string
            let bestMove = getBestMove(fen: fen)
            bestMoves.append(bestMove)
        
            let bestMoveUCIString = changeMoveToBestMove(originalMove: uci, bestMove: bestMove)
            
            let bestMoveFEN = uciToFEN(uciMoves: bestMoveUCIString)
            bestFenStrings.append(bestMoveFEN)
...
                       self.uciPlays = getUCIStringFromDB(gameID: gameID)
                }
            
        }
        bestFenStrings.insert("", at: 0)
        bestMoves.insert("press the thumbs up button to see the what the best move wouldve been at that position", at: 0)
        uciPlays.insert("your moves will appear here", at: 0)
    
    }
    
    var body: some View {
        
        VStack {
...
                    }
                }) {
                    Image(systemName: "chevron.backward")
                        .resizable()
                        .aspectRatio(contentMode: .fit)
                        .frame(height: 30)
                }.accessibilityIdentifier("backwards")
                Spacer()
                Button(action: {
                    timer?.invalidate() // Stops the timer if running
                    // Handle reset button action
                    fenIndex = 0
                    isPlaying = false
...
                            
                }) {
                    Image(systemName: "chevron.forward")
                        .resizable()
                        .aspectRatio(contentMode: .fit)
                        .frame(height: 30)
                }.accessibilityIdentifier("forward")
            }
            .padding()
        }
    }
}

...
